--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ html {
     <div class="container">
         <h2 class="text-center mb-5">My Projects</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="col">
+            <!-- <div class="card-footer"><div class="col">
                 <div class="card bg-light text-dark h-100">
                     <img src="images/projects/1_5RrShFp_plOon8zAffKzSw.jpg" class="card-img-top project-image" alt="Project 1">
                     <div class="card-body">
@@ -196,7 +196,7 @@ html {
                         <p class="text-muted mt-2"><small>Links to the project are not available yet.</small></p>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="col">
                 <div class="card bg-light text-dark h-100">
                     <img src="images/projects/63440d4add9f1c05273c8978_11 best task automation tools to speed up your scut work-p-1600.png" class="card-img-top project-image" alt="Project 2">
@@ -222,6 +222,19 @@ html {
                         <a href="#" class="btn btn-primary">Blog Post</a> 
                         <a href="https://github.com/buanide/Statistical-Modelling" class="btn btn-secondary">Source Code</a>
                         <p class="text-muted mt-2"><small>The blog is not done.</small></p>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card bg-light text-dark h-100">
+                    <img src="images/projects/data_visualisation_water.png" class="card-img-top project-image" alt="Project 3">
+                    <div class="card-body">
+                        <h5 class="card-title">Water for everyone, Polytech' Lille</h5>
+                        <p class="card-text">I created three dashboards to analyze water needs at different scales: national, continental, and global. 
+                            The aim of the study was to select a country that would benefit from financial aid to improve its water access.
+                    
+                            </p>
+                        <a href="https://public.tableau.com/app/profile/buani.doki.engoue/viz/Waterforeveryone/Histoire1" class="btn btn-primary">Link to the project</a>
                     </div>
                 </div>
             </div>
