add summary scooters

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
                                  des offres de produits plus personnalisées, ce qui augmentera la satisfaction des clients.
                             </p>
                         <a data-lang="en" href="https://github.com/buanide/Statistical-Modelling" class="btn btn-primary">Link to the project</a>
+                        <a data-lang="en" href="summaries\scooters.html" class="btn btn-secondary"> Summary </a>
                         <a data-lang="fr" style="display: none;" href="https://github.com/buanide/Statistical-Modelling" class="btn btn-primary">Lien vers le projet</a>
                     </div>
                 </div>
@@ -201,9 +202,6 @@
     </div>
 </nav>
 <!-- Sticky Navigation Bar End -->
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
